--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link marketplace" href="#">Marketplace</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link rankings" href="#">Rankings</a>
+                        <a class="nav-link rankings" href="https://homework-17-xi.vercel.app/">Rankings</a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link wallet" href="#">Connect a wallet</a>
